; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpio/extr_gpio-mb86s7x.c_mb86s70_gpio_get.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpio/extr_gpio-mb86s7x.c_mb86s70_gpio_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gpio_chip = type { i32 }
%struct.mb86s70_gpio_chip = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gpio_chip*, i32)* @mb86s70_gpio_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mb86s70_gpio_get(%struct.gpio_chip* %0, i32 %1) #0 {
  %3 = alloca %struct.gpio_chip*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.mb86s70_gpio_chip*, align 8
  store %struct.gpio_chip* %0, %struct.gpio_chip** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.gpio_chip*, %struct.gpio_chip** %3, align 8
  %7 = call %struct.mb86s70_gpio_chip* @gpiochip_get_data(%struct.gpio_chip* %6)
  store %struct.mb86s70_gpio_chip* %7, %struct.mb86s70_gpio_chip** %5, align 8
  %8 = load %struct.mb86s70_gpio_chip*, %struct.mb86s70_gpio_chip** %5, align 8
  %9 = getelementptr inbounds %struct.mb86s70_gpio_chip, %struct.mb86s70_gpio_chip* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i32, i32* %4, align 4
  %12 = call i64 @PDR(i32 %11)
  %13 = add nsw i64 %10, %12
  %14 = call i32 @readl(i64 %13)
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @OFFSET(i32 %15)
  %17 = and i32 %14, %16
  %18 = icmp ne i32 %17, 0
  %19 = xor i1 %18, true
  %20 = xor i1 %19, true
  %21 = zext i1 %20 to i32
  ret i32 %21
}

declare dso_local %struct.mb86s70_gpio_chip* @gpiochip_get_data(%struct.gpio_chip*) #1

declare dso_local i32 @readl(i64) #1

declare dso_local i64 @PDR(i32) #1

declare dso_local i32 @OFFSET(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
